--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,3 +23,12 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run build --if-present
+    - uses: shallwefootball/s3-upload-action@master
+      name: Upload to S3
+      id: S3
+      with:
+        aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws_bucket: tahti-test
+        source_dir: 'samples'
+        destination_dir: 'samples'
