--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,12 +23,10 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run build --if-present
-    - uses: shallwefootball/s3-upload-action@master
-      name: Upload to S3
-      id: S3
-      with:
-        aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws_bucket: tahti-test
-        source_dir: 'samples'
-        destination_dir: 'samples'
+    - name: Upload to S3
+      run: |
+        aws s3 sync ./samples s3://tahti-test/samples
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: 'eu-central-1'
