--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/maxjvh/tahti-samples#readme",
   "dependencies": {
-    "aws-sdk": "^2.1058.0"
+    "glob": "^7.2.0",
+    "js-yaml": "^4.1.0"
   }
 }
