--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/maxjvh/tahti-samples#readme",
   "dependencies": {
     "glob": "^7.2.0",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "libflacjs": "^5.4.0",
+    "wavefile": "^11.0.0"
   }
 }
