--- a/packs/TAUI/meta.yaml
+++ b/packs/TAUI/meta.yaml
@@ -5,3 +5,10 @@ description: >-
   Taui is a Finnish musician interested in things falling apart at the seams,
   as explored in the patterns. The samples in this pack venture into
   off-kilter percussion, unnamed chords and classic supersaws. Enjoy!
+patterns:
+  - name: LÄPIKUULTAVA
+    id: oqjpaewy
+  - name: SANKKA
+    id: mpjeemzj
+  - name: VALAISTU
+    id: xzjlnlxj
