--- a/packs/BPB-DD-8/meta.yaml
+++ b/packs/BPB-DD-8/meta.yaml
@@ -1,6 +1,7 @@
 name: BPB Yamaha DD-8
 author: Bedroom Producers Blog
 author_website: 'https://bedroomproducersblog.com/2009/10/31/free-sample-pack-3-yamaha-dd-8/'
+draft: true
 description: >-
   BPB was launched by Tomislav Zlatic in April 2009 and has since become one
   of the most popular online resources for music producers, beatmakers, home
