--- a/packs/BPB-Household/meta.yaml
+++ b/packs/BPB-Household/meta.yaml
@@ -1,8 +1,8 @@
 name: BPB Household Percussion
 author: Bedroom Producers Blog
 author_website: 'https://bedroomproducersblog.com/2011/09/19/free-sample-pack-5-household-percussion/'
-draft: true
 description: >-
   BPB was launched by Tomislav Zlatic in April 2009 and has since become one
   of the most popular online resources for music producers, beatmakers, home
   recording enthusiasts, project studio owners, and sound designers.
+version: 2
